<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SecondaryActivity"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="end"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/black"
        >

        <Button
            android:id="@+id/ed_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_small_graduation_svgrepo_com"
            android:backgroundTint="@color/black"
            android:drawableTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            />

        <TextView
            android:id="@+id/home_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/education" />


        <Button
            android:id="@+id/closebutton"
            android:layout_width="94dp"
            android:layout_height="50dp"
            android:layout_marginStart="140dp"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_actions_close_svgrepo_com"
            android:drawableTint="@color/white"
            android:shadowColor="@color/white"
            app:iconTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/education_Button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:drawableTop="@drawable/ic_graduation_svgrepo_com"
            android:backgroundTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle"
            />


        <Button
            android:id="@+id/skill_Button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:drawableTop="@drawable/ic_settings_svgrepo_com"
            android:backgroundTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/hobbies_Button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:drawableTop="@drawable/ic_puzzle_svgrepo_com"
            android:backgroundTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/achi_Button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:drawableTop="@drawable/ic_badge_svgrepo_com"
            android:backgroundTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        >
        <View
            android:id="@+id/up_divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:contentDescription="@string/app_name"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp " >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/introeducation_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/education" />

            <ImageView
                android:id="@+id/learn"
                android:layout_width="400dp"
                android:layout_height="300dp"
                android:contentDescription="@string/photo"
                app:srcCompat="@drawable/photo_1488190211105_8b0e65b80b4e"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/couse1_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/course1" />

            <TextView
                android:id="@+id/dorset_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/dorset" />

            <TextView
                android:id="@+id/startdorset_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/startdorset" />

                <ImageView
                android:id="@+id/dorset"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/photo"
                app:srcCompat="@drawable/logo_website"
                tools:ignore="ImageContrastCheck" />



            <TextView
                android:id="@+id/couse2_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/course2" />

            <TextView
                android:id="@+id/unip_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/unip" />

            <TextView
                android:id="@+id/startunip_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/startunip" />

            <ImageView
                android:id="@+id/unip"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/photo"
                app:srcCompat="@drawable/logo_unip_png_1"
                tools:ignore="ImageContrastCheck" />



            <TextView
                android:id="@+id/cr_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/_6906b68d2a52712a832657c52de4815_divisor_de_linha_de_borda_ornamentado"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/cr"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/android_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="-40dp"
                android:gravity="center"
                android:text="@string/android"
                android:textSize="12sp" />


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        >
        <View
            android:id="@+id/down_divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/back_button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_action_undo_svgrepo_com"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="11sp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_home_svgrepo_com"
            tools:ignore="SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle"/>


        <Button
            android:id="@+id/next_button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_action_redo_svgrepo_com"
            android:text="@string/skill"
            android:textColor="@color/black"
            android:textSize="11sp"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>

</LinearLayout>
