<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FifthActivity"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="end"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        >

        <Button
            android:id="@+id/ed_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_small_badge_svgrepo_com"
            android:backgroundTint="@color/black"
            android:drawableTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            />

        <TextView
            android:id="@+id/home_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/achi" />


        <Button
            android:id="@+id/closebutton"
            android:layout_width="94dp"
            android:layout_height="50dp"
            android:layout_marginStart="155dp"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_actions_close_svgrepo_com"
            android:drawableTint="@color/white"
            android:shadowColor="@color/white"
            app:iconTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >


        <Button
            android:id="@+id/education_Button5"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginEnd="5dp"
            android:drawableTop="@drawable/ic_graduation_svgrepo_com"
            android:backgroundTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            />


        <Button
            android:id="@+id/skill_Button5"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginEnd="5dp"
            android:drawableTop="@drawable/ic_settings_svgrepo_com"
            android:backgroundTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/hobbies_Button5"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginEnd="5dp"
            android:drawableTop="@drawable/ic_puzzle_svgrepo_com"
            android:backgroundTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            />

        <Button
            android:id="@+id/achi_Button5"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginEnd="5dp"
            android:drawableTop="@drawable/ic_badge_svgrepo_com"
            android:backgroundTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:contentDescription="@string/app_name"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp " >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/purple_500"
                android:text="five" />



            <TextView
                android:id="@+id/cr_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:paddingTop="50dp"
                android:text="@string/cr" />

            <TextView
                android:id="@+id/android_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:paddingTop="5dp"
                android:text="@string/android" />


        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/back_button"
            android:layout_width="94dp"
            android:layout_height="90dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="50dp"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_action_undo_svgrepo_com"
            android:text="@string/hobbies"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <Button
            android:id="@+id/home_button"
            android:layout_width="94dp"
            android:layout_height="90dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_home_svgrepo_com"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>
</LinearLayout>
