<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/icons8_education_64" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/settings" />


        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/puzzle" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/award" />

    </LinearLayout>

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints">


</ScrollView>

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="757dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="71dp"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0.3dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img_20220122_173228" />

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:text="@string/janaina"
            android:textColor="@color/purple_500"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/intro_textView"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/intro"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/Contact_textView"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



